--- a/views/shared/_layout.html
+++ b/views/shared/_layout.html
@@ -16,6 +16,7 @@
         <li class="navbar-toggler">&equiv;</li>
         <li class="navbar-item"><a href="/" class="navbar-link">Schedule</a></li>
         <li class="navbar-item"><a href="/team/" class="navbar-link">Team</a></li>
+        <li class="navbar-item"><a href="/contexts/" class="navbar-link">Shift Contexts</a></li>
         <li class="navbar-item"><a href="/colors/" class="navbar-link">Colors</a></li>
       </ul>
     </nav>
