--- a/views/color/list.html
+++ b/views/color/list.html
@@ -7,7 +7,9 @@
 {% block content %}
 <h1>Note Colors</h1>
 
-<form method="post" action="/colors/add/" id="form"></form>
+<form method="post" action="/colors/add/" id="form">
+  <input type="hidden" name="csrf_token" value="{{ model.csrf_token }}" />
+</form>
 
 <table class="color-table">
   <tbody>
