--- a/views/shared/_layout.html
+++ b/views/shared/_layout.html
@@ -14,11 +14,21 @@
   <header>
     <nav>
       <ul class="navbar">
-        <li class="navbar-toggler">&equiv;</li>
-        <li class="navbar-item"><a href="/" class="navbar-link">Schedule</a></li>
-        <li class="navbar-item"><a href="/team/" class="navbar-link">Team</a></li>
-        <li class="navbar-item"><a href="/contexts/" class="navbar-link">Shift Contexts</a></li>
-        <li class="navbar-item"><a href="/colors/" class="navbar-link">Colors</a></li>
+        <li class="navbar-toggler">
+          &equiv;
+        </li>
+        <li class="navbar-item">
+          <a href="/" class="navbar-link">Schedule</a>
+        </li>
+        <li class="navbar-item">
+          <a href="/team-members/" class="navbar-link">Team members</a>
+        </li>
+        <li class="navbar-item">
+          <a href="/contexts/" class="navbar-link">Shift Contexts</a>
+        </li>
+        <li class="navbar-item">
+          <a href="/colors/" class="navbar-link">Colors</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -26,7 +36,7 @@
     {% block content %}{% endblock %}
   </main>
   <footer>
-
+    &copy;
   </footer>
 </body>
 </html>
