Fix shift context note functionality

--- a/src/views/shiftContextNote/edit.html
+++ b/src/views/shiftContextNote/edit.html
@@ -18,7 +18,7 @@
     </div>
     <div>
       <label for="note">Note</label>
-      <textarea id="note" name="note">{{ model.shiftContext.note }}</textarea>
+      <textarea id="note" name="note">{{ model.shiftContextNote.note }}</textarea>
     </div>
     <div>
       {{ csrf(model) }}
