--- a/src/views/shared/_layout.html
+++ b/src/views/shared/_layout.html
@@ -5,29 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="/css/reset.css" />
-  <link rel="stylesheet" href="/css/stickyFooter.css" />
-  <link rel="stylesheet" href="/css/navbar.css" />
+  <link href="/css/output.css" rel="stylesheet" />
   {% block styles %}{% endblock %}
 </head>
 <body>
   <header>
     <nav>
-      <ul class="navbar">
-        <li class="navbar-toggler">
+      <ul class="flex">
+        <li class="hidden p-4">
           &equiv;
         </li>
-        <li class="navbar-item">
-          <a href="/" class="navbar-link">Schedule</a>
+        <li class="p-4">
+          <a href="/">Schedule</a>
         </li>
-        <li class="navbar-item">
-          <a href="/team-members/" class="navbar-link">Team members</a>
+        <li class="p-4">
+          <a href="/team-members/">Team members</a>
         </li>
-        <li class="navbar-item">
-          <a href="/contexts/" class="navbar-link">Shift Contexts</a>
+        <li class="p-4">
+          <a href="/contexts/">Shift Contexts</a>
         </li>
-        <li class="navbar-item">
-          <a href="/colors/" class="navbar-link">Colors</a>
+        <li class="p-4">
+          <a href="/colors/">Colors</a>
         </li>
       </ul>
     </nav>
