--- a/src/views/schedule/year.html
+++ b/src/views/schedule/year.html
@@ -3,7 +3,7 @@
 {% block title %}{{ model.year }}{% endblock %}
 
 {% block content %}
-  <div class="flex justify-center gap-8 pb-8">
+  <div class="flex justify-center gap-8 py-8">
     <a href="/schedule/{{ model.year - 1 }}/" class="self-center">
       {{ model.year - 1}}
     </a>
