--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -3,28 +3,131 @@
 {% block title %}{{ model.title }}{% endblock %}
 
 {% block content %}
-  <div class="flex flex-col min-h-100">
-    <div class="w-full sm:w-xl mx-auto flex justify-between gap-8 px-4 py-8">
-      <a href="/schedule/{{ model.previousWeekString }}/" class="self-center select-none">
-        &lt;
+
+  {# Navigation Header #}
+  <div class="w-full sm:w-xl mx-auto flex justify-between gap-8 px-4 py-8">
+    <a href="/schedule/{{ model.previousWeekString }}/" class="self-center select-none">
+      &lt;
+    </a>
+    <h1 class="text-center font-bold text-3xl select-none">
+      <a href="/schedule/{{ model.currentWeek.getUTCFullYear() }}/">
+        {{ model.title }}
       </a>
-      <h1 class="text-center font-bold text-3xl select-none">
-        <a href="/schedule/{{ model.currentWeek.getUTCFullYear() }}/">
-          {{ model.title }}
+    </h1>
+    <a href="/schedule/{{ model.nextWeekString }}/" class="self-center select-none">
+      &gt;
+    </a>
+  </div>
+
+  <div class="flex flex-col min-h-100 overflow-x-auto">
+    {# Column headers #}
+    <ul class="flex w-full">
+      <li class="flex-1 min-w-xs"></li>
+      {% for date in model.dates %}
+        <li class="flex-1 min-w-xs text-center text-xl font-bold">
+          {{ date.toISOString().substring(0, 10) }}
+        </li>
+      {% endfor %}
+    </ul>
+
+    {# Column header buttons #}
+    <ul class="flex w-full pt-4">
+      <li class="flex-1 min-w-xs">
+        <a class="block w-fit p-2 pr-4 ml-4 bg-blue-400 text-white rounded">
+          &plus; Add time slot
         </a>
-      </h1>
-      <a href="/schedule/{{ model.nextWeekString }}/" class="self-center select-none">
-        &gt;
-      </a>
-    </div>
-    <div class="flex-1 overflow-x-auto">
-      <ul class="flex w-full">
-        {% for date in model.dates %}
-          <li class="flex-1 min-w-xs text-center text-xl font-bold">
-            {{ date.toISOString().substring(0, 10) }}
-          </li>
+      </li>
+      {% for date in model.dates %}
+        <li class="flex-1 min-w-xs flex gap-2 justify-center">
+          <a href="" class="block p-2 border rounded">
+            Copy
+          </a>
+          <a href="" class="block p-2 border rounded">
+            Clear
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+
+    {% for shiftContextData in model.schedule.shiftContextData %}
+      <div class="flex w-full">
+        <h2 class="flex-1 min-w-xs p-4 text-2xl font-bold">
+          {{ shiftContextData.shiftContext.name }}
+        </h2>
+        {% for dailyEntry in shiftContextData.dailyEntries %}
+          <div class="flex-1 min-w-xs pt-2">
+
+            {# Shift context note card #}
+
+            <div class="p-2 my-4 mx-2 border rounded flex gap-2">
+              <div class="flex-1 stc-color-{{ dailyEntry.shiftContextNote.colorId }}">
+                {{ dailyEntry.shiftContextNote.note }}
+              </div>
+              <a href="/shift-context/{{ dailyEntry.shiftContextNote.shiftContextId }}/note/{{ dailyEntry.shiftContextNote.dateString.replaceAll('-', '/') }}/" class="w-fit px-2 py-1 mx-auto border rounded">
+                Edit
+              </a>
+            </div>
+
+            {# Time slot card #}
+
+            {% for timeSlot in dailyEntry.timeSlots %}
+              <div class="p-2 my-4 mx-2 border rounded">
+                <div>
+                  {{ timeSlot.startTimeString }} to {{ timeSlot.endTimeString }}
+                </div>
+                <div>
+                  <input type="checkbox" id="{{ timeSlot.id }}_requiresAdult" {{ "checked" if timeSlot.requiresAdult }} disabled />
+                  <label for="{{ timeSlot.id }}_requiresAdult">Requires adult</label>
+                </div>
+                <div>
+                  {{ timeSlot.teamMember.fullName if timeSlot.teamMember.fullName else "(No assignee)" }}
+                </div>
+                <div class="stc-color-{{ timeSlot.color.id }}">
+                  {{ timeSlot.note }}
+                </div>
+                <div class="pt-2 text-center">
+                  <a href="" class="inline-block px-2 py-1 border rounded">
+                    Edit
+                  </a>
+                  <a href="" class="inline-block px-2 py-1 border rounded">
+                    Delete
+                  </a>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
         {% endfor %}
-      </ul>
+
+      </div>
+    {% endfor %}
+
+    <div class="flex w-full gap-2">
+      <h2 class="flex-1 min-w-xs p-4 text-2xl font-bold">
+        Substitutes
+      </h2>
+
+      {% for substitutes in model.schedule.substitutes %}
+
+        {# Substitutes card #}
+      
+        <div class="flex-1 min-w-xs">
+          <div class="p-2 my-4 mx-2 border rounded">
+            <ul>
+              {% for substitute in substitutes %}
+                <li>
+                  {{ substitute.teamMember.fullName }}
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+
+      {% endfor %}
+    </div>
+
+    <!--
+
+    <div class="flex-1 overflow-x-auto">
       <h2 class="text-3xl font-bold p-4">Time slots</h2>
       <div class="flex w-full">
         {% for date in model.dates %}
@@ -70,4 +173,5 @@
       <h2 class="text-3xl font-bold p-4">Shift notes</h2>
     </div>
   </div>
+  -->
 {% endblock %}
