--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -19,6 +19,12 @@
     </a>
   </div>
 
+  <div class="w-full text-center pb-8">
+    <a class="inline-block p-2 border rounded" href="">Copy</a>
+    <a class="inline-block p-2 border rounded" href="{{ model.clearLink }}">Clear</a>
+    <a class="inline-block p-2 border rounded" href="">Export</a>
+  </div>
+
   <div class="flex flex-col min-h-100 overflow-x-auto">
     {# Column headers #}
     <ul class="flex w-full">
@@ -33,16 +39,18 @@
     {# Column header buttons #}
     <ul class="flex w-full pt-4">
       <li class="flex-1 min-w-xs">
-        <a class="block w-fit p-2 pr-4 ml-4 bg-blue-400 text-white rounded">
+        <a class="block w-fit p-2 pr-4 ml-4 bg-blue-400 text-white rounded" href="/schedule/time-slot/add/">
           &plus; Add time slot
         </a>
       </li>
       {% for date in model.dates %}
         <li class="flex-1 min-w-xs flex gap-2 justify-center">
+          {% set formatted = date.toISOString().substring(0, 10).replaceAll("-", "/") %}
           <a href="" class="block p-2 border rounded">
             Copy
           </a>
-          <a href="" class="block p-2 border rounded">
+          {% set url = ["/schedule/clear/", formatted, "/to/", formatted, "/"] | join %}
+          <a href="{{ url }}" class="block p-2 border rounded">
             Clear
           </a>
         </li>
@@ -86,10 +94,10 @@
                   {{ timeSlot.note }}
                 </div>
                 <div class="pt-2 text-center">
-                  <a href="" class="inline-block px-2 py-1 border rounded">
+                  <a href="/schedule/time-slot/{{ timeSlot.id }}/" class="inline-block px-2 py-1 border rounded">
                     Edit
                   </a>
-                  <a href="" class="inline-block px-2 py-1 border rounded">
+                  <a href="/schedule/time-slot/{{ timeSlot.id }}/delete/" class="inline-block px-2 py-1 border rounded">
                     Delete
                   </a>
                 </div>
