--- a/src/views/schedule/year.html
+++ b/src/views/schedule/year.html
@@ -30,10 +30,15 @@
           {% for i in range(0, calendarPage.initialDayOfWeek) %}
             <li class="w-1/7"></li>
           {% endfor %}
+
           {% for i in range(1, calendarPage.daysInMonth + 1) %}
-            <li class="w-1/7 text-center">
-              {% set day = ("0" + loop.index).slice(-2) %}
-              <a href="/schedule/{{ model.year }}/{{ month }}/{{ day }}/">{{ i }}</a>
+            {% set day = ("0" + loop.index).slice(-2) %}
+            {% set datePath = [model.year, "/", month, "/", day] | join %}
+
+            <li class="w-1/7 text-center" {{ 'style="color: white; background-color: skyblue;"' | safe if datePath == model.todayPath }} >
+              <a href="/schedule/{{ datePath }}/">
+                {{ i }}
+              </a>
             </li>
           {% endfor %}
         </ul>
