--- a/src/views/timeSlot/clear.html
+++ b/src/views/timeSlot/clear.html
@@ -16,7 +16,7 @@
     <div>
       {{ csrf(model) }}
       <input type="submit" value="Delete" />
-      <a href="{{ model.cancel }}">Cancel</a>
+      <a href="{{ model.cancelLink }}">Cancel</a>
     </div>
   </form>
 {% endblock %}
