--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -110,7 +110,7 @@
       </div>
     {% endfor %}
 
-    <div class="flex w-full gap-2">
+    <div class="flex w-full">
       <h2 class="flex-1 min-w-xs p-4 text-2xl font-bold">
         Substitutes
       </h2>
