--- a/src/views/teamMember/profile.html
+++ b/src/views/teamMember/profile.html
@@ -32,7 +32,7 @@
   </div>
   <div>
     <div>Birth date</div>
-    <div>{{ model.teamMember.birthDate.toISOString().substring(0, 10) }}</div>
+    <div>{{ model.teamMember.birthDate }}</div>
   </div>
   <div>
     <div>Email</div>
