Fix shift context note editing

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -1,4 +1,7 @@
 {% from "./csrf.html" import csrf %}
+{% from "./formatDate.html" import formatDatePath %}
+{% from "./inlineStyles.html" import inlineStyles %}
+
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
