--- a/src/views/color/list.html
+++ b/src/views/color/list.html
@@ -1,4 +1,4 @@
-{% extends "../shared/_layout.html" %}
+{% extends "../_shared/_layout.html" %}
 
 {% block styles %}
   <link rel="stylesheet" href="/css/colorPages.css" />
