--- a/src/views/timeSlot/clear.html
+++ b/src/views/timeSlot/clear.html
@@ -1,5 +1,5 @@
-{% extends "../shared/_layout.html" %}
-{% from "../shared/field.html" import field %}
+{% extends "../_shared/_layout.html" %}
+{% from "../_shared/field.html" import field %}
 
 {% set title = 'Clear schedule' %}
 
