--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -1,4 +1,4 @@
-{% extends "../shared/_layout.html" %}
+{% extends "../_shared/_layout.html" %}
 
 {% block title %}{{ model.title }}{% endblock %}
 
@@ -25,6 +25,70 @@
     <a class="inline-block p-2 border rounded" href="{{ model.exportLink }}">Export</a>
   </div>
 
+  <table>
+    {% for row in model.schedule.table %}
+      <tr>
+        {% for col in row %}
+          <td class="min-w-xs border">
+            {% set type = col.type %}
+            {% set data = col.content %}
+
+            {% if type == "header" %}
+              <h2 class="text-2xl font-bold">{{ data }}</h2>
+            {% endif %}
+
+            {% if type == "dateHeader" %}
+              <h2 class="text-2xl font-bold">
+                {{ formatDatePath(data) }}
+              </h2>
+              <p>
+                <a href="/schedule/copy/{{ formatDatePath(data) }}/to/{{ formatDatePath(data) }}/">
+                  Copy
+                </a>
+                <a href="/schedule/clear/{{ formatDatePath(data) }}/to/{{ formatDatePath(data) }}/">
+                  Clear
+                </a>
+              </p>
+            {% endif %}
+
+            {% if type == "ShiftContext" %}
+              <h2 class="text-2xl font-bold">{{ data.name }}</h2>
+            {% endif %}
+
+            {% if type == "ShiftContextNote" %}
+              {{ data.date }}
+              {% if data.color.hex %}
+              <p style="background-color: {{ ['#', data.color.hex] | join }}">
+                {{ data.note }}
+              </p>
+              {% else %}
+              <p>
+                {{ data.note }}
+              </p>
+              {% endif %}
+              <p>
+                <a href="/shift-context/{{ data.shiftContextId }}/note/{{ formatDatePath(data.date) }}/">Edit</a>
+              </p>
+            {% endif %}
+
+            {% if type == "SubstituteList" %}
+              {% if data.teamMembers %}
+                <ul class="list-disc">
+                  {% for teamMember in data.teamMembers %}
+                    <li>{{ teamMember }}</li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+              <a href="/substitutes/{{ formatDatePath(data.date) }}/">Edit</a>
+            {% endif %}
+          </td>
+        {% endfor %}
+      </tr>
+    {% endfor %}
+  </table>
+{% endblock %}
+
+{% block temp %}
   <div class="flex flex-col min-h-100 overflow-x-auto">
     {# Column headers #}
     <ul class="flex w-full">
