--- a/src/views/shiftContextNote/edit.html
+++ b/src/views/shiftContextNote/edit.html
@@ -1,4 +1,4 @@
-{% extends "../shared/_layout.html" %}
+{% extends "../_shared/_layout.html" %}
 
 {% set title = "Edit Shift Context Note" %}
 
@@ -10,10 +10,10 @@
     <div>
       <label for="colorId">Color</label>
       <select id="colorId" name="colorId">
-        <option {{ "checked" if not model.shiftContextNote.colorId }} >(none)</option>
+        <option {{ "selected" if not model.shiftContextNote.colorId }} >(none)</option>
         {% for color in model.colors %}
           <option value="{{ color.id }}"
-            {{ "checked" if model.shiftContextNote.colorId == color.id }} >{{ color.name }}</option>
+            {{ "selected" if model.shiftContextNote.colorId == color.id }} >{{ color.name }}</option>
         {% endfor %}
       </select>
     </div>
@@ -24,7 +24,7 @@
     <div>
       {{ csrf(model) }}
       <button type="submit">Save</button>
-      <a href="/">Cancel</a>
+      <a href="/schedule/{{ formatDatePath(model.weekStart) }}/">Cancel</a>
     </div>
   </form>
 {% endblock %}
