--- a/src/views/substitute/edit.html
+++ b/src/views/substitute/edit.html
@@ -1,6 +1,6 @@
-{% extends "../shared/_layout.html" %}
+{% extends "../_shared/_layout.html" %}
 
-{% set title = "Substitutes " + model.dateString %}
+{% set title = "Substitutes " + model.substituteList.date %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -10,7 +10,7 @@
     {% for teamMember in model.teamMembers %}
       <div>
         <input type="checkbox" name="{{ teamMember.id }}" id="{{ teamMember.id }}"
-          {{ "checked" if model.substitutesIds.includes(teamMember.id) }} />
+          {{ "checked" if model.substituteList.teamMemberIds.includes(teamMember.id) }} />
         <label for="{{ teamMember.id }}">{{ teamMember.fullName }}</label>
       </div>
     {% endfor %}
