--- a/src/views/timeSlot/edit.html
+++ b/src/views/timeSlot/edit.html
@@ -1,5 +1,5 @@
-{% extends "../shared/_layout.html" %}
-{% from "../shared/field.html" import field with context %}
+{% extends "../_shared/_layout.html" %}
+{% from "../_shared/field.html" import field with context %}
 
 {% if model.isEdit %}
   {% set title = 'Edit Time Slot' %}
