--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -75,6 +75,13 @@
               <p>{{ "18+" if data.requiresAdult }}</p>
             {% endif %}
 
+            {% if type == "TimeSlot" %}
+              <p>{{ data.startDateTime }}</p>
+              <p>{{ data.endDateTime }}</p>
+              <p>{{ "18+" if data.requiresAdult }}</p>
+              <p>{{ data.id }}</p>
+            {% endif %}
+
             {% if type == "SubstituteList" %}
               {% if data.teamMembers %}
                 <ul class="list-disc">
