--- a/src/views/substitute/edit.html
+++ b/src/views/substitute/edit.html
@@ -17,7 +17,7 @@
     <div>
       {{ csrf(model) }}
       <input type="submit" value="Save" />
-      <a href="/">Cancel</a>
+      <a href="/schedule/{{ formatDatePath(model.substituteList.date) }}/">Cancel</a>
     </div>
   </form>
 {% endblock %}
