Add time slot assignee recommendations

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -10,6 +10,7 @@
   <title>{% block title %}{% endblock %}</title>
   <link href="/css/output.css" rel="stylesheet" />
   {% block styles %}{% endblock %}
+  {% block scripts %}{% endblock %}
 </head>
 <body>
   <div class="flex flex-col min-h-screen">
