Tweak typical availability list view

--- a/src/views/typicalAvailability/list.html
+++ b/src/views/typicalAvailability/list.html
@@ -26,6 +26,9 @@
         {{ typicalAvailability.startTime }} - {{ typicalAvailability.endTime }}
       </span>
       <span>
+        {{ "🙂" if typicalAvailability.isPreference else "☹️" }}
+      </span>
+      <span>
         <a href="/team-member/{{ model.teamMember.id }}/availability/{{ typicalAvailability.id }}/">
           Edit
         </a>
