--- a/src/views/typicalAvailability/list.html
+++ b/src/views/typicalAvailability/list.html
@@ -1,15 +1,16 @@
 {% extends "../_shared/_layout.html" %}
+{% from "../_shared/teamMemberTabs.html" import teamMemberTabs %}
 
 {% set dayNames = [
   "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"
 ] %}
 
-{% set title = "Availability of " + model.teamMember.fullName %}
+{% set title = model.teamMember.fullName + " | Availability" %}
 
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-  <h1>{{ title }}</h1>
+  {{ teamMemberTabs(model.teamMember, "availability") }}
   <div>
     <a href="/team-member/{{ model.teamMember.id }}/availability/add/">
       &plus; Add typical availability
@@ -37,5 +38,8 @@
         </a>
       </span>
     </div>
+  {% endfor %}
+  {% for i in range(currentDayOfWeek, 7) %}
+    <h2>{{ dayNames[i] }}</h2>
   {% endfor %}
 {% endblock %}
