--- a/src/views/unavailability/week.html
+++ b/src/views/unavailability/week.html
@@ -1,26 +1,62 @@
 {% extends "../_shared/_layout.html" %}
+{% from "../_shared/teamMemberTabs.html" import teamMemberTabs %}
 
-{% set title = "Week of " %}
+{% set monthNames = [
+  "January",
+  "February",
+  "March",
+  "April",
+  "May",
+  "June",
+  "July",
+  "August",
+  "September",
+  "October",
+  "November",
+  "December"
+] %}
+
+{% set dayNames = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"] %}
+
+{% set title = model.teamMember.fullName + " | Unavailability" %}
 
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-  <div>
-    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.previousWeekString }}/">
+  {{ teamMemberTabs(model.teamMember, "unavailability") }}
+  <div class="p-8 flex">
+    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.previousWeekString }}/" class="p-2">
       &lt;
     </a>
-    <h1>{{ title }}</h1>
-    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.nextWeekString }}/">
+    <h1 class="p-2">
+      Week of {{ monthNames[model.startDate.getMonth()] }} {{ model.startDate.getDate() }}, {{ model.startDate.getFullYear() }}
+    </h1>
+    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.nextWeekString }}/" class="p-2">
       &gt;
     </a>
   </div>
+  {% set currentDayOfWeek = -1 %}
   {% for unavailability in model.unavailabilities %}
+    {# Add headings for weekdays #}
+    {% set unavailabilityDayOfWeek = unavailability.startDateTime.getDay() %}
+    {% if unavailabilityDayOfWeek > currentDayOfWeek %}
+      {% for i in range(currentDayOfWeek + 1, unavailabilityDayOfWeek + 1) %}
+        <h2>
+          {{ dayNames[i] }}
+          <a href="/team-member/{{ model.teamMember}}"
+        </h2>
+      {% endfor %}
+      {% set currentDayOfWeek = unavailabilityDayOfWeek %}
+    {% endif %}
     <div>
       <span>
         {{ unavailability.startDateTime }}
       </span>
       <span>
         {{ unavailability.endDateTime }}
+      </span>
+      <span>
+        {{ "🙂" if unavailability.isPreference else "☹️" }}
       </span>
       <span>
         <a href="/team-member/{{ unavailability.teamMemberId }}/unavailability/{{ unavailability.id }}/edit/">
@@ -31,5 +67,10 @@
         </a>
       </span>
     </div>
+  {% endfor %}
+  {% for i in range(currentDayOfWeek + 1, 7) %}
+    <h2>
+      {{ dayNames[i] }}
+    </h2>
   {% endfor %}
 {% endblock %}
