--- a/src/views/unavailability/week.html
+++ b/src/views/unavailability/week.html
@@ -1,5 +1,6 @@
 {% extends "../_shared/_layout.html" %}
 {% from "../_shared/teamMemberTabs.html" import teamMemberTabs %}
+{% from "../_shared/formatDate.html" import formatDatePath %}
 
 {% set monthNames = [
   "January",
@@ -29,48 +30,45 @@
       &lt;
     </a>
     <h1 class="p-2">
-      Week of {{ monthNames[model.startDate.getMonth()] }} {{ model.startDate.getDate() }}, {{ model.startDate.getFullYear() }}
+      <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.startDate.getFullYear() }}/">
+        Week of {{ monthNames[model.startDate.getMonth()] }} {{ model.startDate.getDate() }}, {{ model.startDate.getFullYear() }}
+      </a>
     </h1>
     <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.nextWeekString }}/" class="p-2">
       &gt;
     </a>
   </div>
-  {% set currentDayOfWeek = -1 %}
-  {% for unavailability in model.unavailabilities %}
-    {# Add headings for weekdays #}
-    {% set unavailabilityDayOfWeek = unavailability.startDateTime.getDay() %}
-    {% if unavailabilityDayOfWeek > currentDayOfWeek %}
-      {% for i in range(currentDayOfWeek + 1, unavailabilityDayOfWeek + 1) %}
-        <h2>
-          {{ dayNames[i] }}
-          <a href="/team-member/{{ model.teamMember}}"
-        </h2>
-      {% endfor %}
-      {% set currentDayOfWeek = unavailabilityDayOfWeek %}
-    {% endif %}
-    <div>
-      <span>
-        {{ unavailability.startDateTime }}
-      </span>
-      <span>
-        {{ unavailability.endDateTime }}
-      </span>
-      <span>
-        {{ "🙂" if unavailability.isPreference else "☹️" }}
-      </span>
-      <span>
-        <a href="/team-member/{{ unavailability.teamMemberId }}/unavailability/{{ unavailability.id }}/edit/">
-          Edit
-        </a>
-        <a href="/team-member/{{ unavailability.teamMemberId }}/unavailability/{{ unavailability.id }}/delete/">
-          Delete
-        </a>
-      </span>
-    </div>
-  {% endfor %}
-  {% for i in range(currentDayOfWeek + 1, 7) %}
+  <div>
+    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ formatDatePath(model.startDate) }}/clear/">
+      Clear
+    </a>
+  </div>
+  {% for row in model.table %}
     <h2>
-      {{ dayNames[i] }}
+      {{ dayNames[row.date.getDay()] }}
     </h2>
+    {% for unavailability in row.unavailabilities %}
+      <div>
+        <span>
+          {{ unavailability.startDateTime }}
+        </span>
+        <span>
+          {{ unavailability.endDateTime }}
+        </span>
+        <span>
+          {{ "🙂" if unavailability.isPreference else "☹️" }}
+        </span>
+        <span>
+          <a href="/team-member/{{ unavailability.teamMemberId }}/unavailability/{{ unavailability.id }}/edit/">
+            Edit
+          </a>
+          <a href="/team-member/{{ unavailability.teamMemberId }}/unavailability/{{ unavailability.id }}/delete/">
+            Delete
+          </a>
+        </span>
+      </div>
+    {% else %}
+      <p>(none)</p>
+    {% endfor %}
   {% endfor %}
 {% endblock %}
